Footer is fixed at bottom and equal spacing added

--- a/style.css
+++ b/style.css
@@ -40,10 +40,21 @@ img{
     max-height: 150px;
 }
 
+.back2{
+    display: flex;
+    min-height: 100px;
+    padding: 0px 64px 64px 64px;
+}
 
+.info{
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+}
 
 .back3{
     background-color: #e5e7eb;
+    padding: 0px 64px 64px 64px;
 }
 
 
@@ -75,4 +86,8 @@ img{
     background-color: #1f2937;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom:0;
 }
